--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <title>Bản đồ Đà Nẵng</title>
+    <meta name="description" content="Bản đồ Đà Nẵng">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Slarkize">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="map.png">
+    <style>
+        .center {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <div class="center">
+        <h3>Sinh viên Đà Nẵng</h3>
+        <a href="https://www.facebook.com/danangstudent"><img src="facebook.png" alt="Sinh viên Đà Nẵng"></a>
+    </div>
 </body>
 </html>
